# game-engine-v2

./: .gitignore  CMakeLists.txt  CMakePresets.json  imgui.ini  notes.txt
src/: main.cpp
src/Engine/: Engine.cpp  Engine.hpp
src/Events/: ApplicationEvent.hpp  Event.hpp  KeyCodes.h  KeyEvent.hpp  MouseCodes.hpp  MouseEvent.hpp
src/Layers/: ExampleLater.cpp  ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
src/Windows/: LinuxWindow.cpp  LinuxWindow.hpp  Window.hpp
